# mobilerack-interface

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  README.md  Soft Robot Fabrication.md  captured_markers.txt  cmake_install.cmake  fish_arduino.ino  log_pressure.csv  plotGraph.py  sba_DataAnalysis.py  sba_DataAnalysis_Gav.py  sba_DataAnalysis_tsv.py  sba_QTMcollect3DmarkerData.py
Antares/: 200mbar1hz.py  200mbar2hz.py  200mbar4hz.py  300mbar1hz.py  300mbar2hz.py  300mbar2hzdutycycle.py  300mbar3dot5hz.py  300mbar3hz.py  300mbar4hz.py  Antares_ValveController.cpp  Antares_quasistatic.cpp  Antares_step_input.cpp  CMakeLists.txt  cmake_install.cmake  force.csv  free response.py  loadcell_integration.py  log_pressure.csv
Antares/2021-02-25_exp/: 200mbar1Hz_force.csv  200mbar1Hz_pressure.csv  200mbar2Hz_force.csv  200mbar2Hz_pressure.csv  200mbar4Hz_force.csv  200mbar4Hz_pressure.csv  300mbar2Hz_force.csv  300mbar2Hz_pressure.csv  300mbar4Hz_force.csv  300mbar4Hz_pressure.csv  300mbar_1Hz.csv  300mbar_1Hz_pressure.csv  free_response_force.csv  free_response_pressure.csv
Antares/2021-02-26_ds10_air/: 200_mbar_1_Hz_force.csv  200_mbar_1_Hz_pressure.csv  200_mbar_2_Hz_force.csv  200_mbar_2_Hz_pressure.csv  200_mbar_3_Hz_force.csv  200_mbar_3_Hz_pressure.csv  200_mbar_3dot5_Hz_force.csv  200_mbar_3dot5_Hz_pressure.csv  200_mbar_4_Hz_force.csv  200_mbar_4_Hz_pressure.csv  300_mbar_1_Hz_force.csv  300_mbar_1_Hz_pressure.csv  300_mbar_2_Hz_force.csv  300_mbar_2_Hz_pressure.csv  300_mbar_3_Hz_force.csv  300_mbar_3_Hz_pressure.csv  300_mbar_3dot5_Hz_force.csv  300_mbar_3dot5_Hz_pressure.csv  300_mbar_4_Hz_force.csv  300_mbar_4_Hz_pressure.csv  freeresponse_force.csv  freeresponse_pressure.csv
Antares/2021-02-26_ds10_water/: 200_mbar_1_Hz_force.csv  200_mbar_1_Hz_pressure.csv  200_mbar_2_Hz_force.csv  200_mbar_2_Hz_pressure.csv  200_mbar_3_Hz_force.csv  200_mbar_3_Hz_pressure.csv  200_mbar_3dot5_Hz_force.csv  200_mbar_3dot5_Hz_pressure.csv  200_mbar_4_Hz_force.csv  200_mbar_4_Hz_pressure.csv  300_mbar_1_Hz_force.csv  300_mbar_1_Hz_pressure.csv  300_mbar_2_Hz_force.csv  300_mbar_2_Hz_pressure.csv  300_mbar_3_Hz_force.csv  300_mbar_3_Hz_pressure.csv  300_mbar_3dot5_Hz_force.csv  300_mbar_3dot5_Hz_pressure.csv  300_mbar_4_Hz_force.csv  300_mbar_4_Hz_pressure.csv  free_response_force.csv  free_response_pressure.csv
Antares/2021-02-28_chambers_air/: 350_mbar_2_Hz_force.csv  350_mbar_2_Hz_pressure.csv  350_mbar_4_Hz_force.csv  350_mbar_4_Hz_pressure.csv  500_mbar_2_Hz_force.csv  500_mbar_2_Hz_pressure.csv  500_mbar_4_Hz_force.csv  500_mbar_4_Hz_pressure.csv  freeresponse_force.csv  freeresponse_pressure.csv
Antares/2021-02-28_chambers_water/: 350_mbar_2_Hz_force.csv  350_mbar_2_Hz_pressure.csv  350_mbar_4_Hz_force.csv  350_mbar_4_Hz_pressure.csv  500_mbar_2_Hz_force.csv  500_mbar_2_Hz_pressure.csv  500_mbar_4_Hz_force.csv  500_mbar_4_Hz_pressure.csv  freeresponse_force.csv  freeresponse_force2.csv  freeresponse_pressure.csv  freeresponse_pressure2.csv
Antares/2021-02-28_ds20_air/: 500_mbar_2_Hz_force.csv  500_mbar_2_Hz_pressure.csv  500_mbar_4_Hz_force.csv  500_mbar_4_Hz_pressure.csv  750_mbar_2_Hz_force.csv  750_mbar_2_Hz_pressure.csv  750_mbar_4_Hz_force.csv  750_mbar_4_Hz_pressure.csv  freeresponse_force.csv  freeresponse_pressure.csv
Antares/2021-02-28_ds20_water/: 500_mbar_2_Hz_force.csv  500_mbar_2_Hz_pressure.csv  500_mbar_4_Hz_force.csv  500_mbar_4_Hz_pressure.csv  750_mbar_2_Hz_force.csv  750_mbar_2_Hz_pressure.csv  750_mbar_4_Hz_force.csv  750_mbar_4_Hz_pressure.csv  freeresponse_force.csv  freeresponse_pressure.csv
Antares/DS20controllers/: 750mbar2Hz.py  750mbar4Hz.py  free response.py
Antares/DS30 tests/: 300mbar3dot5hz.py  300mbar3hz.py  300mbar4hz.py  500mbar1hz.py  500mbar2hz.py  500mbar3dot5hz.py  500mbar3hz.py  500mbar4hz.py  force.csv  free response.py  log_pressure.csv  pressure test.py
Antares/Loadcell_debugging/: 0mbar_air.csv  0mbar_mounted.csv  0mbar_water.csv  0mbar_water_pressure.csv  100mbar_each.csv  150mbar_each.csv  250mbar_mounted  250mbar_water.csv  250mbar_water_pressure.csv
Antares/more_chamber_controllers/: 350mbar2Hz.py  350mbar4Hz.py  500mbar2Hz.py  500mbar4Hz.py  free response.py
SoftTrunk/: .gitignore  Bill of materials.csv  CMakeLists.txt  Doxyfile  Makefile  README.md  Soft Robot Fabrication.md  characterize.py  forceController  plotGraph.py  test_forceController
SoftTrunk/example_urdfreader/: .gitignore  example_urdfreader.cc
SoftTrunk/html/: _augmented_rigid_arm_8h_source.html  _controller_p_c_c_8h_source.html  _curvature_calculator_8h_source.html  _force_controller_8h_source.html  _m_p_a_8h_source.html  _manager_8h_source.html  _opti_track_client_8h_source.html  _soft_arm_8h_source.html  _soft_trunk__common__defs_8h.html  _soft_trunk__common__defs_8h_source.html  annotated.html  class_augmented_rigid_arm-members.html  class_augmented_rigid_arm.html  class_controller_p_c_c-members.html  class_controller_p_c_c.html  class_curvature_calculator-members.html  class_curvature_calculator.html  class_force_controller-members.html  class_force_controller.html  class_globals-members.html  class_globals.html  class_m_p_a-members.html  class_m_p_a.html  class_opti_track_client-members.html  class_opti_track_client.html  class_soft_arm-members.html  class_soft_arm.html  class_soft_trunk_manager-members.html  class_soft_trunk_manager.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen.css  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  index.html  (+3 more)
examples/: CMakeLists.txt  PAM_SoPra.cpp  README.md  Sample_code.cpp  cmake_install.cmake  example_QTMcollect3DmarkerData.cpp  example_QualisysClient.cpp  example_SerialInterface.cpp  example_ValveController.cpp  example_ValveController_explained.cpp  example_ValveController_qtm_timesync.cpp  example_ValveController_sinusoidal.cpp  hand_proto2.2.cpp  hand_proto2.cpp  hand_proto3.1.cpp  hand_proto3.2.cpp  hand_proto3.3.cpp  hand_proto3.4.cpp
(+220 files in other folders)
