cmake_minimum_required(VERSION 3.10.2)
project(MobileRackInterface-examples)

add_executable(example_QTMcollect3DmarkerData example_QTMcollect3DmarkerData.cpp)
target_link_libraries(example_QTMcollect3DmarkerData QualisysClient ValveController)

add_executable(example_QualisysClient example_QualisysClient.cpp)
target_link_libraries(example_QualisysClient QualisysClient)

add_executable(example_ValveController_sinusoidal example_ValveController_sinusoidal.cpp)
target_link_libraries(example_ValveController_sinusoidal ValveController)

add_executable(example_ValveController example_ValveController.cpp)
target_link_libraries(example_ValveController ValveController)

add_executable(example_SerialInterface example_SerialInterface.cpp)
target_link_libraries(example_SerialInterface SerialInterface)

add_executable(example_ValveController_qtm_timesync example_ValveController_qtm_timesync)
target_link_libraries(example_ValveController_qtm_timesync ValveController QualisysClient)