cmake_minimum_required(VERSION 3.10.2)
project(MobileRackInterface-examples)

add_executable(example_QualisysClient example_QualisysClient.cpp)
target_link_libraries(example_QualisysClient QualisysClient)

add_executable(example_ValveController_sinusoidal example_ValveController_sinusoidal.cpp)
target_link_libraries(example_ValveController_sinusoidal ValveController)

add_executable(example_ValveController example_ValveController.cpp)
target_link_libraries(example_ValveController ValveController)

add_executable(example_ValveController_explained example_ValveController_explained.cpp)
target_link_libraries(example_ValveController_explained ValveController)

add_executable(example_SerialInterface example_SerialInterface.cpp)
target_link_libraries(example_SerialInterface SerialInterface)

add_executable(hand_proto2.2 hand_proto2.2.cpp)
target_link_libraries(hand_proto2.2 ValveController)

add_executable(hand_proto3.1 hand_proto3.1.cpp)
target_link_libraries(hand_proto3.1 ValveController)

add_executable(hand_proto3.2 hand_proto3.2.cpp)
target_link_libraries(hand_proto3.2 ValveController)

add_executable(hand_proto3.3 hand_proto3.3.cpp)
target_link_libraries(hand_proto3.3 ValveController)

add_executable(hand_proto3.4 hand_proto3.4.cpp)
target_link_libraries(hand_proto3.4 ValveController)


add_executable(PAM_SoPra PAM_SoPra.cpp)
target_link_libraries(PAM_SoPra ValveController)

add_executable(example_ValveController_qtm_timesync example_ValveController_qtm_timesync)
target_link_libraries(example_ValveController_qtm_timesync ValveController QualisysClient)
